<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:strokeColor="@color/app_theme"
    app:strokeWidth="2dp">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bruce_wayne"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_10_2002"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contact"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_123456789"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:background="@color/app_theme" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_paid"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAmountPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10000"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="@string/amount_pending"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAmountPending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10000"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAmountPaid" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>